crates/ruff_python_parser/tests/snapshots/valid_syntax@args_unparenthesized_generator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/args_unparenthesized_generator.py
---
## AST

```
Module(
    ModModule {
        range: 0..55,
        body: [
            Expr(
                StmtExpr {
                    range: 0..25,
                    value: Call(
                        ExprCall {
                            range: 0..25,
                            func: Name(
                                ExprName {
                                    range: 0..3,
                                    id: Name("sum"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 3..25,
                                args: [
                                    Generator(
                                        ExprGenerator {
                                            range: 4..24,
                                            elt: Name(
                                                ExprName {
                                                    range: 4..5,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 6..24,
                                                    target: Name(
                                                        ExprName {
                                                            range: 10..11,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Call(
                                                        ExprCall {
                                                            range: 15..24,
                                                            func: Name(
                                                                ExprName {
                                                                    range: 15..20,
                                                                    id: Name("range"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                            arguments: Arguments {
                                                                range: 20..24,
                                                                args: [
                                                                    NumberLiteral(
                                                                        ExprNumberLiteral {
                                                                            range: 21..23,
                                                                            value: Int(
                                                                                10,
                                                                            ),
                                                                        },
                                                                    ),
                                                                ],
                                                                keywords: [],
                                                            },
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: false,
                                                },
                                            ],
                                            parenthesized: false,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 26..54,
                    value: Call(
                        ExprCall {
                            range: 26..54,
                            func: Name(
                                ExprName {
                                    range: 26..29,
                                    id: Name("sum"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 29..54,
                                args: [
                                    Generator(
                                        ExprGenerator {
                                            range: 30..52,
                                            elt: Name(
                                                ExprName {
                                                    range: 31..32,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 33..51,
                                                    target: Name(
                                                        ExprName {
                                                            range: 37..38,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Call(
                                                        ExprCall {
                                                            range: 42..51,
                                                            func: Name(
                                                                ExprName {
                                                                    range: 42..47,
                                                                    id: Name("range"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                            arguments: Arguments {
                                                                range: 47..51,
                                                                args: [
                                                                    NumberLiteral(
                                                                        ExprNumberLiteral {
                                                                            range: 48..50,
                                                                            value: Int(
                                                                                10,
                                                                            ),
                                                                        },
                                                                    ),
                                                                ],
                                                                keywords: [],
                                                            },
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: false,
                                                },
                                            ],
                                            parenthesized: true,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
